fix header collapse on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,6 +37,12 @@
   --c-accent-900: 91, 60, 155;
 }
 
+body {
+  height: 100vh;
+  overflow: hidden;
+  overscroll-behavior: none;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -85,7 +91,7 @@
     color: #9d70ff;
     text-shadow: 0 0 5px #9d70ff, 0 0 10px #9d70ff, 0 0 20px #9d70ff, 0 0 40px #ff00ff, 0 0 80px #ff00ff;
   }
-  
+
   .text-neon-low {
     color: #ffffff;
     text-shadow: 0 0 5px #9d70ff, 0 0 10px #9d70ff, 0 0 20px #9d70ff;
